--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,14 @@
     font-family: "Roboto Mono", monospace;
 }
 
+.encabezado {
+    background-color: #3b3a3a;
+}
+
 .encabezado h1 {
-    background-color: #000000;
     color: #fa8334;
     text-align: center;
-    font-size: 80px;
+    font-size: 60px;
 }
 
 
@@ -45,8 +48,32 @@
 }
 
 .linea-de-menu-1 {
-    font-size: 30px;
+    display: flex;
+}
+
+.linea-de-menu-1 menu1 {
+    display: flex;
+}
+
+.linea-de-menu-1 menu1 img {
+    display: flex;
+}
+
+.h2 {
+    position: relative;
     text-align: center;
+    align-items: center;
+}
+
+.menu1 {
+    position: relative;
+    border: #fa8334;
+    left: 400px;
+}
+
+.menu2 {
+    position: relative;
+    left: 400px        
 }
 
 .cerveza {
@@ -67,6 +94,7 @@
 .linea-de-menu-2 {
     font-size: 30px;
     text-align: center;
+    display: inline-block;
 }
 
 .energizantes {
@@ -90,22 +118,42 @@
 }
 
 .pie {
+    text-align: center;
     font-size: 20px;
+}
+
+.piecontenedor {
+    background-color: #3b3a3a;
+}
+
+.parawhatsapp {
+    text-align: center;
+    color: #f0f8ff;
+}
+
+.redes {
+    text-align: center;
+    color: #f0f8ff;
+}
+.ubicacion {
+    position: relative;
+    right: 50px;
 }
 
 .whatsapp {
     width: 50px;
-    height: 30px;
+    height: 30px;    
 }
 
 .instagram {
+    display: inline;
     width: 80px;
-    height: 80px;
+    height: 80px;    
 }
 
 .facebook {
     width: 80px;
-    height: 80px;
+    height: 80px;    
 }
 
 .a1 {
@@ -128,9 +176,13 @@
     height: 150px;
 }
 
-.contacto {
+.mnav {
+    display: flex;
+    text-decoration: none;
     text-align: center;
+    background-color: #f0cfb8;     
 }
+
 
 
 
